--- a/deployments/docker/Dockerfile
+++ b/deployments/docker/Dockerfile
@@ -8,7 +8,7 @@ COPY . /app
 WORKDIR /app 
 
 ## Install all packages 
-RUN pip install -r requirements.txt 
+RUN pip install -r /app/requirements.txt 
 
 ## Default port is 5000
 
